force-app/main/default/objects/KimbleAgent__Measure__c/KimbleAgent__Measure__c.object-meta.xml
<CustomObject>
    <label>Kimble Sense Measure</label>
    <nameField>
        <label>Measure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Kimble Sense Measures</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>