force-app/main/default/objects/KimbleAgent__Measure__c/fields/KimbleAgent__ClassName__c.field-meta.xml
<CustomField>
    <fullName>KimbleAgent__ClassName__c</fullName>
    <label>Class Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>