force-app/main/default/objects/KimbleAgent__Measure__c/fields/KimbleAgent__Description__c.field-meta.xml
<CustomField>
    <fullName>KimbleAgent__Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>