force-app/main/default/objects/KimbleAgent__Measure__c/fields/KimbleAgent__IsActive__c.field-meta.xml
<CustomField>
    <fullName>KimbleAgent__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>