force-app/main/default/objects/KimbleAgent__Measure__c/fields/KimbleAgent__LastRun__c.field-meta.xml
<CustomField>
    <fullName>KimbleAgent__LastRun__c</fullName>
    <label>Last Run</label>
    <type>DateTime</type>
</CustomField>