force-app/main/default/objects/KimbleAgent__Measure__c/fields/KimbleAgent__LastRunLog__c.field-meta.xml
<CustomField>
    <fullName>KimbleAgent__LastRunLog__c</fullName>
    <label>Last Run Log</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>