force-app/main/default/objects/KimbleAgent__Measure__c/fields/KimbleAgent__LastRunStatus__c.field-meta.xml
<CustomField>
    <fullName>KimbleAgent__LastRunStatus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Run Status</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleAgent__ReferenceData__c.KimbleAgent__Domain__c</field>
            <operation>equals</operation>
            <value>MeasureStatus</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleAgent__ReferenceData__c</referenceTo>
    <relationshipLabel>Measures (Status)</relationshipLabel>
    <relationshipName>MeasuresStatus</relationshipName>
    <type>Lookup</type>
</CustomField>