force-app/main/default/objects/KimbleAgent__Measure__c/fields/KimbleAgent__NamespacePrefix__c.field-meta.xml
<CustomField>
    <fullName>KimbleAgent__NamespacePrefix__c</fullName>
    <label>Namespace Prefix</label>
    <length>15</length>
    <type>Text</type>
</CustomField>