force-app/main/default/objects/KimbleAgent__Measure__c/fields/KimbleAgent__NextRun__c.field-meta.xml
<CustomField>
    <fullName>KimbleAgent__NextRun__c</fullName>
    <label>Next Run</label>
    <type>DateTime</type>
</CustomField>