force-app/main/default/objects/KimbleAgent__Measure__c/fields/KimbleAgent__RetentionPolicyNumberOfPeriods__c.field-meta.xml
<CustomField>
    <fullName>KimbleAgent__RetentionPolicyNumberOfPeriods__c</fullName>
    <label>Retention Policy No Of Periods</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>