force-app/main/default/objects/KimbleAgent__Measure__c/fields/KimbleAgent__RetentionPolicyPeriodType__c.field-meta.xml
<CustomField>
    <fullName>KimbleAgent__RetentionPolicyPeriodType__c</fullName>
    <label>Retention Policy Period Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>Week</fullName>
            </value>
            <value>
                <fullName>Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>