force-app/main/default/objects/KimbleAgent__Measure__c/fields/KimbleAgent__RunInSandbox__c.field-meta.xml
<CustomField>
    <fullName>KimbleAgent__RunInSandbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run In Sandbox</label>
    <type>Checkbox</type>
</CustomField>