force-app/main/default/objects/KimbleAgent__Measure__c/fields/KimbleAgent__Threshold__c.field-meta.xml
<CustomField>
    <fullName>KimbleAgent__Threshold__c</fullName>
    <label>Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>