force-app/main/default/objects/KimbleAgent__Measure__c/listViews/KimbleAgent__All.listView-meta.xml
<ListView>
    <fullName>KimbleAgent__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleAgent__NextRun__c</columns>
    <columns>KimbleAgent__IsActive__c</columns>
    <columns>KimbleAgent__RunFrequency__c</columns>
    <columns>KimbleAgent__LastRun__c</columns>
    <columns>KimbleAgent__NamespacePrefix__c</columns>
    <columns>KimbleAgent__ClassName__c</columns>
    <columns>KimbleAgent__Threshold__c</columns>
    <columns>KimbleAgent__LastRunStatus__c</columns>
    <columns>KimbleAgent__LastRunLog__c</columns>
    <columns>KimbleAgent__Description__c</columns>
    <columns>KimbleAgent__RetentionPolicyNumberOfPeriods__c</columns>
    <columns>KimbleAgent__RetentionPolicyPeriodType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>